# security-gym

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  README.md  ROADMAP.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
attacks/: __init__.py  __main__.py  config.py  orchestrator.py
attacks/campaigns/: recon_ssh_log4shell.yaml  ssh_brute_only.yaml
attacks/collection/: __init__.py  auditd.py  collector.py  ebpf_collector.py  import_logs.py  labeler.py
attacks/modules/: __init__.py  base.py  credential_stuffing.py  log4shell.py  recon.py  redis_lua_escape.py  ssh_brute_force.py  ssh_post_auth.py
attacks/network/: __init__.py  ip_manager.py
attacks/tests/: test_config.py  test_import_logs.py  test_ip_manager.py  test_labeler.py  test_modules.py
campaigns/: credential_stuffing_only.yaml  full_killchain.yaml  log4shell_only.yaml  post_auth_only.yaml  recon_only.yaml  recon_ssh_log4shell.yaml  redis_exploit_only.yaml  redis_killchain.yaml  ssh_brute_only.yaml
configs/: stream_30d_heavy.yaml  stream_365d_realistic.yaml  stream_7d_brute_only.yaml  stream_90d_mixed.yaml
data/: DATASET_README.md  build_benign_report.json  croissant.json
examples/: benchmark.py  keyword_agent.py  random_agent.py  streaming_demo.py  threshold_agent.py
figures/: env-schematic.tex
scripts/: build_benign.py  build_benign_v3.py  collect_ebpf_baseline.py  insert_ebpf_baseline.py  migrate_event_type.py  run_all_campaigns.sh  scrub_benign_db.py  validate_labels.py
server/: BUILD.md  docker-compose.yml  ebpf_collector.py  nginx.conf
src/security_gym/: __init__.py
src/security_gym/adapters/: __init__.py  scan_stream.py
tests/: conftest.py  test_composer.py  test_ebpf_encoding.py  test_ebpf_filter.py  test_ebpf_parser.py  test_env.py  test_env_hybrid.py  test_env_v2.py  test_event_store.py  test_features.py  test_journal_parser.py  test_parsers.py  test_scan_stream.py  test_session_features.py  test_structured_buffer.py  test_syslog_parser.py  test_targets.py  test_web_access_parser.py  test_web_error_parser.py  test_wrappers.py
(+29 files in other folders)
